# CLI_Proxy

./: .dockerignore  .gitignore  Dockerfile  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/app/: config.py  main.py
src/app/api/: routes.py
src/app/auth/: __init__.py  base.py  claude.py  gemini.py  iflow.py  manager.py  openai.py  qwen.py
src/app/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  openai_provider.py  registry.py
src/app/stores/: __init__.py  base.py  file_store.py  manager.py
src/app/translator/: __init__.py  base.py  openai_to_gemini.py  registry.py
src/app/utils/: http_client.py
